--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Joel Chacon Portfolio</title>
 
-    <!-- Favicons -->
-    <link href="%PUBLIC_URL%/assets/img/favicon.png" rel="icon" />
-    <link href="%PUBLIC_URL%/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script>
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {
+            colors: {
+              primary: "#1173d4",
+              "background-light": "#f6f7f8",
+              "background-dark": "#101922",
+            },
+            fontFamily: {
+              display: ["Manrope", "sans-serif"],
+            },
+          },
+        },
+      };
+    </script>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&family=Raleway:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+      }
+    </style>
 
-    <!-- Vendor CSS Files -->
-    <link href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="%PUBLIC_URL%/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Vendor CSS you still need -->
+    <link
+      href="%PUBLIC_URL%/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link href="%PUBLIC_URL%/assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="%PUBLIC_URL%/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+    <link
+      href="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="%PUBLIC_URL%/assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
 
-    <!-- Main CSS File -->
+    <!-- Main CSS -->
     <link href="%PUBLIC_URL%/assets/css/main.css" rel="stylesheet" />
   </head>
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="bg-background-light dark:bg-background-dark">
+    <!-- ✅ React root -->
     <div id="root"></div>
 
-    <!-- Vendor JS Files -->
-    <script src="%PUBLIC_URL%/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Optional: Vendor JS -->
     <script src="%PUBLIC_URL%/assets/vendor/aos/aos.js"></script>
     <script src="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="%PUBLIC_URL%/assets/vendor/glightbox/js/glightbox.min.js"></script>
